Almost have alignment issues finished

--- a/web-ui/src/components/view_feedback_selector/ViewFeedbackSelector.css
+++ b/web-ui/src/components/view_feedback_selector/ViewFeedbackSelector.css
@@ -1,8 +1,3 @@
-.row {
-    width: 100%;
-    flex-direction: row;
-    align-items:center;
-}
 
 .two-em-top-margin {
     margin-top: 2em;
@@ -10,30 +5,123 @@
 .two-em-left-margin {
     margin-left: 2em;
 }
-.column {
+
+.person-name {
+    color: black;
+}
+.red-text{
+    color: red;
+}
+
+.small-margin {
+    margin-left: 80em;
+}
+
+.MuiCardHeader-action {
+    margin:0;
+    margin-top: 0;
+    margin-right: 0;
+    margin-top: 2em;
+}
+
+.no-wrap {
+    flex-wrap: nowrap;
+}
+.align-center {
+    text-align: center;
+    justify-content: center;
+    align-self: center;
+    align-content: center;
+}
+.person-collapse-info {
+   padding-right: 34.7em;
+}
+
+.person-collapse-avatar {
+    padding-right: 1em;
+}
+
+.align-end {
+    text-align: right;
+}
+.input-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-self: center;
+    margin-top: 3em;
     width: 100%;
 }
-
-.align-center {
-
-}
-.align-end {
-    justify-content: flex-end;
+.card-info-container {
+    margin-top: 2em,
 }
 
-.select-container {
-    align-items: flex-end;
-    align-self: flex-end;
-    justify-content: flex-end;
+.MuiFormControl-root {
+    width: 20%;
+    margin-right: 2em;
 }
 
-.view-feedback-selector-container {
-    overflow-y: hidden;
-}
+@media screen and (min-width: 501px) and (max-width: 769px) {
 
-@media screen and (max-width: 500px) {
-   .textField {
-       width: 20%
-   }
+    .input-row {
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+    .person-collapse-info {
+        padding-right: 17em;
+    }
+    .card-info-container {
+        margin-left: 2.5em;
+        text-align:right;
+    }
+   
+      
+  }
+@media screen and (min-width: 362px) and (max-width: 500px) {
+
+  .input-row {
+      padding-left: 5%;
+      padding-right: 5%;
+  }
+  .person-collapse-info {
+      padding-right: 25%;
+  }
+  .card-info-container {
+      margin-left: 2.5em;
+      text-align:right;
+  }
+ 
+    
+}
+@media screen and (min-width: 321px) and (max-width: 361px) {
+
+    .input-row {
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+    .person-collapse-info {
+        padding-right: 4.7rem;
+    }
+    .card-info-container {
+        margin-left: 2.5em;
+        text-align:right;
+    }
+   
+      
+  }
+  
+
+@media screen and (max-width: 320px) {
+    .input-row {
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+    .person-collapse-info {
+        padding-right: 3em;
+    }
+    .card-info-container {
+        margin-left: 2.5em;
+        text-align:right;
+    }
     
 }
